# full-stack-init-template

./: .env.example  .gitignore  .trunkignore  README.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 01_bug_report.yml  02_feature_request.yml  03_question.yml
.trunk/: trunk.yaml
backend/: .dockerignore  .env.example  .env.test  .gitignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: item_routes.py  routes.py
backend/app/core/: app.py
backend/app/core/services/: item_service.py
backend/app/db/: database.py
backend/app/models/: item.py
backend/app/repositories/: item_repository.py
backend/tests/: conftest.py  test_items.py
backend/tests/api/: test_item_routes.py
backend/tests/core/: test_app.py
backend/tests/core/services/: test_item_service.py
backend/tests/db/: test_database.py
backend/tests/models/: test_item.py
backend/tests/repositories/: test_item_repository.py
docs/: README.md
frontend/: .env.example  .gitignore  Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: Button.tsx  ItemForm.tsx  ItemList.tsx
frontend/src/pages/: Home.tsx
frontend/src/utils/: api.ts
